--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,12 +56,12 @@ set -g default-terminal "screen-256color"
 
 # Status line color changes
 set -g status-style fg="#aab2bf",bg="#222222"
-set -g window-status-style fg="#56b6c2",bg="#222222"
-setw -g window-status-current-style fg="#222222",bg="#56b6c2"
+set -g window-status-style fg="#61afef",bg="#222222"
+setw -g window-status-current-style fg="#222222",bg="#e5c07b"
 
 # Pane border and color settings
 setw -g pane-border-style fg="#aab2bf",bg="#222222"
-setw -g pane-active-border-style fg="#56b6c2",bg="#222222"
+setw -g pane-active-border-style fg="#61afef",bg="#222222"
 
 # Allow for fun things like italics
 set -g default-terminal "xterm-256color"
