update dotfiles for alacritty on mac and better colors

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -52,9 +52,12 @@ unbind p
 bind p paste-buffer
 
 # Colors... all the colors. 
-set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+#set -ag terminal-overrides ",xterm*:Tc"
+set -ag terminal-overrides ",alacritty:RGB"
 
 # Status line color changes
+set -g status-right "%d-%b-%y %H:%M"
 set -g status-style fg="#aab2bf",bg="#282c34"
 set -g window-status-style fg="#61afef",bg="#282c34"
 setw -g window-status-current-style fg="#282c34",bg="#e5c07b"
@@ -62,9 +65,6 @@ setw -g window-status-current-style fg="#282c34",bg="#e5c07b"
 # Pane border and color settings
 setw -g pane-border-style fg="#aab2bf",bg="#282c34"
 setw -g pane-active-border-style fg="#e5c07b",bg="#282c34"
-
-# Allow for fun things like italics
-set -g default-terminal "xterm-256color"
 
 # Load mac-specific settings
 if-shell "uname | grep -q Darwin" "source-file ~/.tmux.mac.conf"
