--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,6 +1,8 @@
+enf:
+  TERM: xterm-256color
 window:
-  columns: 125
-  lines: 36
+  columns: 108
+  lines: 45
 
 scrolling:
   history: 1000
@@ -8,5 +10,45 @@ scrolling:
 
 font:
   normal:
-    family: "SauceCodePro Nerd Font" 
-  size: 10
+    family: "iMWritingMonoS Nerd Font" 
+  size: 13
+  use_thin_strokes: true
+
+# Colors (One Dark)
+colors:
+  # Default colors
+  primary:
+    foreground: '0xabb2bf'
+    background: '0x282c34'
+
+  # Cursor colors
+  cursor:
+    text: '0x2c323c'
+    cursor: '0x5c6370'
+
+  # Selection colors
+  selection:
+    text: CellForeground
+    background: '0x3e4452'
+
+  # Normal colors
+  normal:
+    black:   '0x2c323c'
+    red:     '0xe06c75'
+    green:   '0x98c379'
+    yellow:  '0xe5c07b'
+    blue:    '0x61afef'
+    magenta: '0xc678dd'
+    cyan:    '0x56b6c2'
+    white:   '0x5c6370'
+
+  # Bright colors
+  bright:
+    black:   '0x3e4452'
+    red:     '0xe06c75'
+    green:   '0x98c379'
+    yellow:  '0xe5c07b'
+    blue:    '0x61afef'
+    magenta: '0xc678dd'
+    cyan:    '0x56b6c2'
+    white:   '0xabb2bf'
