--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,6 +1,12 @@
 window:
-  columns: 108
-  lines: 45
+  decorations: buttonless
+  dynamic_title: false
+  dimensions:
+    columns: 120
+    lines: 45
+  padding:
+    x: 15
+    y: 15
 
 scrolling:
   history: 1000
