small fix to support backwards laptop

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,7 +51,7 @@ bind p paste-buffer
 
 # Colors... all the colors. 
 set -g default-terminal "xterm-256color"
-#set -ag terminal-overrides ",xterm*:Tc"
+set -ag terminal-overrides ",xterm*:RGB"
 set -ag terminal-overrides ",alacritty:RGB"
 
 # Status line color changes
