--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -7,7 +7,7 @@ unbind C-b
 set -s escape-time 1
 
 # Reload the file with Prefix r and also let us know it was reloaded
-bind r source-file ~/.tmux.conf \; display "Reloaded!"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded!"
 
 # To send Ctrl-a to other apps running inside tmux, just push it twice!
 bind C-a send-prefix
@@ -65,4 +65,4 @@ setw -g pane-border-style fg="#aab2bf",bg="#282c34"
 setw -g pane-active-border-style fg="#e5c07b",bg="#282c34"
 
 # Load mac-specific settings
-if-shell "uname | grep -q Darwin" "source-file ~/.tmux.mac.conf"
+if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.mac.conf"
