--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -50,7 +50,7 @@ unbind p
 bind p paste-buffer
 
 # colors/theme
-source-file "$_current_dir/themes/onedark.conf"
+source-file "~/.config/tmux/themes/onedark.conf"
 
 # Load mac-specific settings
 if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.mac.conf"
