--- a/tmux/themes/onedark.conf
+++ b/tmux/themes/onedark.conf
@@ -7,7 +7,7 @@ set -ag terminal-overrides ",alacritty:RGB"
 set -g status-right "%d-%b-%y %H:%M"
 set -g status-style fg="#aab2bf",bg="#282c34"
 set -g window-status-style fg="#61afef",bg="#282c34"
-setw -g window-status-current-style fg="#282c34",bg="#e5c07b"
+setw -g window-status-current-style fg="#282c34",bg="#61afef"
 
 # Pane border and color settings
 setw -g pane-border-style fg="#aab2bf",bg="#282c34"
