--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -13,12 +13,22 @@ scrolling:
   history: 1000
   multiplier: 3
 
+# font:
+#   normal:
+#     family: "SauceCodePro Nerd Font Propo"
+#     style: "Regular"
+#   bold:
+#     style: "Medium"
+#   italic:
+#     style: "Italic"
+#   size: 13
+
 font:
   normal:
-    family: "SauceCodePro Nerd Font Propo"
+    family: "iMWritingMono Nerd Font"
     style: "Regular"
   bold:
-    style: "Medium"
+    style: "Regular"
   italic:
     style: "Italic"
   size: 13
