Let tmux inherit from terminal for easy living

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -49,8 +49,16 @@ bind-key -T copy-mode-vi y send -X copy-selection
 unbind p
 bind p paste-buffer
 
-# colors/theme
-source-file "~/.config/tmux/themes/onedark.conf"
-
 # Load mac-specific settings
 if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.mac.conf"
+
+# colors/theme inherit from Alacritty
+# Status line color changes
+set -g status-right "%d-%b-%y %H:%M"
+set -g status-style fg=white,bg=black
+set -g window-status-style fg=blue,bg=black
+setw -g window-status-current-style fg=black,bg=blue
+
+# Pane border and color settings
+setw -g pane-border-style fg=white,bg=black
+setw -g pane-active-border-style fg=yellow,bg=black
