fix bar color tmux

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -55,7 +55,7 @@ if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.mac.conf"
 # colors/theme inherit from Alacritty
 # Status line color changes
 set -g status-right "%d-%b-%y %H:%M"
-set -g status-style fg=white,bg=black
+set -g status-style fg=white,bg="#282c34"
 set -g window-status-style fg=blue,bg=black
 setw -g window-status-current-style fg=black,bg=blue
 
