undo generalization as it was wrong

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,9 +56,9 @@ if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.mac.conf"
 # Status line color changes
 set -g status-right "%d-%b-%y %H:%M"
 set -g status-style fg=white,bg="#282c34"
-set -g window-status-style fg=blue,bg=black
-setw -g window-status-current-style fg=black,bg=blue
+set -g window-status-style fg=blue,bg="#282c34"=black
+setw -g window-status-current-style fg="#282c34",bg=blue
 
 # Pane border and color settings
-setw -g pane-border-style fg=white,bg=black
-setw -g pane-active-border-style fg=yellow,bg=black
+setw -g pane-border-style fg=white,bg="#282c34"
+setw -g pane-active-border-style fg=yellow,bg="#282c34"
