A reversion, but it works

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -3,6 +3,9 @@
 set -g prefix C-a
 unbind C-b
 
+# Colors got effed again for some reason
+set -g default-terminal "alacritty"
+
 # Lower delay b/t prefix and command (apparently this helps avoid crashes into vim)
 set -s escape-time 1
 
@@ -49,16 +52,8 @@ bind-key -T copy-mode-vi y send -X copy-selection
 unbind p
 bind p paste-buffer
 
+# colors/theme
+source-file "~/.config/tmux/themes/onedark.conf"
+
 # Load mac-specific settings
 if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.mac.conf"
-
-# colors/theme inherit from Alacritty
-# Status line color changes
-set -g status-right "%d-%b-%y %H:%M"
-set -g status-style fg=white,bg="#282c34"
-set -g window-status-style fg=blue,bg="#282c34"=black
-setw -g window-status-current-style fg="#282c34",bg=blue
-
-# Pane border and color settings
-setw -g pane-border-style fg=white,bg="#282c34"
-setw -g pane-active-border-style fg=yellow,bg="#282c34"
