Improve zen mode

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -57,3 +57,9 @@ source-file "~/.config/tmux/themes/onedark.conf"
 
 # Load mac-specific settings
 if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.mac.conf"
+
+# Some fixes for alacritty
+set-option -g update-environment "ALACRITTY_LOG \
+                                  ALACRITTY_WINDOW_ID \
+                                  ALACRITTY_SOCKET"
+
