--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,4 @@
-import = ["/Users/delfanbaum/.config/alacritty/themes/onedark.toml"]
+import = ["~/.config/alacritty/themes/active.toml"]
 
 [font]
 size = 14
