--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,6 @@ kitty/
 # Ignore "active" simlinks
 alacritty/themes/active.toml
 tmux/themes/active.conf
+
+# Ignore the uv directory until I have anything interesting in there
+uv/
