--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -53,7 +53,9 @@ unbind p
 bind p paste-buffer
 
 # colors/theme
-source-file "~/.config/tmux/themes/active.conf"
+if-shell "test -f ~/.config/tmux/themes/active.conf" \
+    "source-file ~/.config/tmux/themes/active.conf" \
+    "source-file ~/Repos/dotfiles/tmux/themes/active.conf"
 
 # Load mac-specific settings
 if-shell "uname | grep -q Darwin" "source-file ~/.config/tmux/tmux.mac.conf"
