--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,5 @@
-import = ["~/.config/alacritty/themes/active.toml"]
+#import = ["~/.config/alacritty/themes/active.toml"]
+import = ["~/.config/alacritty/themes/nvim.toml"]
 
 [font]
 size = 14
