--- a/alacritty/themes/onedark.toml
+++ b/alacritty/themes/onedark.toml
@@ -1,31 +1,33 @@
-[colors.bright]
-black = "0x3e4452"
-blue = "0x61afef"
-cyan = "0x56b6c2"
-green = "0x98c379"
-magenta = "0xc678dd"
-red = "0xe06c75"
-white = "0xabb2bf"
-yellow = "0xe5c07b"
-
-[colors.cursor]
-cursor = "0x5c6370"
-text = "0x2c323c"
-
-[colors.normal]
-black = "0x2c323c"
-blue = "0x61afef"
-cyan = "0x56b6c2"
-green = "0x98c379"
-magenta = "0xc678dd"
-red = "0xe06c75"
-white = "0x5c6370"
-yellow = "0xe5c07b"
+# Colors adapted from github.com/olimorris/onedarkpro.nvim
 
 [colors.primary]
-background = "0x282c34"
-foreground = "0xabb2bf"
+background = '0x282c34'
+foreground = '0xabb2bf'
+
+[colors.normal]
+black = '0x282c34'
+red = '0xe06c75'
+green = '0x98c379'
+yellow = '0xe5c07b'
+blue = '0x61afef'
+magenta = '0xc678dd'
+cyan = '0x56b6c2'
+white = '0xabb2bf'
+
+[colors.bright]
+black = '0x3e4451'
+red = '0xe9969d'
+green = '0xb3d39c'
+yellow = '0xedd4a6'
+blue = '0x8fc6f4'
+magenta = '0xd7a1e7'
+cyan = '0x7bc6d0'
+white = '0xc8cdd5'
+
+[colors.cursor]
+text = 'CellBackground'
+cursor = 'CellForeground' # syntax-cursor-color
 
 [colors.selection]
-background = "0x3e4452"
-text = "CellForeground"
+text = 'CellForeground'
+background = '0x5c6370'
