Limit history as it was getting slow to scroll

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -38,6 +38,8 @@ bind L resize-pane -R 5
 
 # Allow mouse use
 set -g mouse on
+# Limit history because it was getting slow
+set-option -g history-limit 500
 
 # enable vi keys
 setw -g mode-keys vi
