--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["~/.config/alacritty/themes/active.toml"]
 
 [font]
 size = 14
@@ -62,3 +61,6 @@ lines = 45
 [window.padding]
 x = 10
 y = 10
+
+[general]
+import = ["~/.config/alacritty/themes/active.toml"]
